Working on contact sheet

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -178,9 +178,14 @@ footer {
 }
 
 .top-left {
-    position: absolute;
+    /* position: absolute; */
     top: 8px;
     left: 16px;
+}
+
+.form-row {
+    width: 100vw;
+    justify-content: center;
 }
 
 /* CONTACT PAGE */
