--- a/stylesheet.css
+++ b/stylesheet.css
@@ -201,13 +201,45 @@ input {
     width: 100%;
     padding: 12px 20px;
     margin: 8px 20px;
+    border: none;
     /* box-sizing: border-box; */
     /* margin: 0 20px; */
 }
 
+textarea {
+    width: 92.5%;
+    margin: 8px 20px;
+    padding: 12px 20px;
+    resize: none;
+    border: none;
+}
+
 /* PORTRAIT MOBILE SCREENS */
 @media only screen and (max-width: 414px) {
+    textarea {
+        width: 90%;
+        margin: 8px 16px;
+    }
 
+    input {
+        width: 90%;
+        margin: 8px 16px;
+    }
+
+    form {
+        padding: 0 16px;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .contactLanding {
+        height: 100vh;
+    }
+
+    .contactForm {
+        flex-direction: column;
+        /* width: 90%; */
+    }
 }
 
 /* LANDSCAPE MOBILE SCREENS */
