--- a/stylesheet.css
+++ b/stylesheet.css
@@ -56,7 +56,6 @@ h1 {
     transform: translate(-50%, -50%);
     text-align: center;
     font-family: "Staatliches";
-    color: white;
     font-size: 8rem;
     line-height: 0.8;
 }
@@ -65,6 +64,11 @@ h1 {
     font-family: "Pinyon Script";
     font-size: 10rem;
     line-height: 0.5;
+    color: white;
+}
+
+.centered > span {
+    color: rgb(58, 255, 189);
 }
 
 .top-right {
@@ -76,7 +80,7 @@ h1 {
 .optionsContainer {
     width: 100vw;
     height: 36vh;
-    background-color: rgb(65, 100, 160);
+    background-color: rgb(29, 55, 100);
     text-align: center;
     display: flex;
     flex-direction: column;
