--- a/stylesheet.css
+++ b/stylesheet.css
@@ -281,6 +281,7 @@ textarea {
     }
 
     form {
+        width: 75vw;
         padding: 65px 16px;
         display: flex;
         flex-direction: column;
