--- a/stylesheet.css
+++ b/stylesheet.css
@@ -79,14 +79,15 @@ h1 {
 
 .optionsContainer {
     width: 100vw;
-    height: 36vh;
-    background-color: rgb(29, 55, 100);
+    /* height: 36vh; */
+    background-color: #315A7C;
     text-align: center;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
     color: white;
+    padding: 35px 0;
 }
 
 .optionsContainer > div > h1 {
@@ -134,7 +135,7 @@ footer {
     }
 
     .optionsContainer {
-        height: 52vh;
+        height: 61vh;
     }
 
     .pricing, .options {
@@ -155,7 +156,7 @@ footer {
 
 @media only screen and (min-width: 824px) {
     .optionsContainer {
-        height: 18vh;
+        height: 27vh;
     }
 
     footer {
@@ -245,6 +246,14 @@ textarea {
 
 .reservationForm {
     display: flex;
+}
+
+form {
+    width: 40vw;
+}
+
+p {
+    text-align: justify;
 }
 
 .reservationP {
